# rmats2sashimiplot

./: .gitignore  2to3.sh  CHANGES.txt  Dockerfile  MANIFEST.in  README.md  README.rst  conda_requirements.txt  pyproject.toml  rmats2sashimiplot.py  setup.py
src/MISO/: README.md  __init__.py  test.py
src/MISO/misopy/: Gene.py  __init__.py  as_events.py  cluster_utils.py  compare_miso.py  credible_intervals.py  exon_utils.py  filter_events.py  gff_utils.py  hypothesis_test.py  index_gff.py  json_utils.py  kde_subclass.py  legacy_test_pysplicing.py  misc_utils.py  miso.py  miso_db.py  miso_pack.py  miso_sampler.py  miso_utils.py  miso_zip.py  module_availability.py  parse_csv.py  parse_gene.py  pe_utils.py  pickle_utils.py  py2c_gene.py  read_simulator.py  reads_utils.py  run_events_analysis.py  run_miso.py  sam_rpkm.py  sam_to_bam.py  sam_utils.py  samples_utils.py  settings.py  summarize_miso.py  test_cluster.py  test_miso.py
src/MISO/misopy/sashimi_plot/: Sashimi.py  plot.py  sashimi_plot.py
src/MISO/misopy/sashimi_plot/plot_utils/: plot_gene.py  plot_settings.py  plotting.py  samples_plotter.py
src/MISO/misopy/sashimi_plot/settings/: sashimi_plot_settings.txt
src/MISO/misopy/settings/: miso_settings.txt
src/rmats2sashimiplot/: rmats2sashimiplot.py
wdl/: README.md  rmats2sashimiplot.wdl
